--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE HTML>
 <html>
 	<title>Evan Druce's Homepage</title>
-	<header>
-		<img src="blog/imgs/selfie.jpg">
-		<h1>Evan Druce's Homepage</h1>
-	</header>
-	<nav>
-		<a href="/#/">Home</a>
-		<a href="/blog/index.html">Blog</a>
-		<a href="/#/">About Me</a>
-		<a href="/#/">Projects</a>
-	</nav>
+	<head>
+		<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+	</head>
+	<div id="topbox" class="clearfix">
+		<header>
+			<span><img src="blog/imgs/selfie.jpg"></span>
+			<span><h1>Evan Druce's Homepage</h1></span>
+		</header>
+		<nav>
+			<a class = "active" href="index.html">Home</a>
+			<a href="blog/index.html">Blog</a>
+			<a href="/#/">About Me</a>
+			<a href="/#/">Projects</a>
+		</nav>
+	</div>
+	<br>
+	<br>
 	<section>
 		<h2>Welcome to my Homepage!</h2>
 		<p>My name is Evan Druce, and I am in the Fiery Skippers cohort at Dev Bootcamp in New York City, class of 2016! This is where you will find professional information about me, including a resume and contact information, as well as links to projects I have completed and the blog I have been writing as part of Phase 0 of Dev Bootcamp.</p>
 	</section>
-	<section>
-		<img src="blog/imgs/selfie.jpg">
-	</section>
 	<footer>
-		<p>Designed by: Evan Druce</p>
-		<p>email: drucee@gmail.com</p>
-		<a href="/#/">
-			<img src="https://www.facebookbrand.com/img/fb-art.jpg">
-		</a>
-		<a href="/#/">
-			<img src="http://megaicons.net/static/img/icons_sizes/8/178/48/logos-github-icon.png">
-		</a>
+		<div id = "bottombox">
+			<div id = "byline">
+				<p>Designed by: Evan Druce</p>
+				<p>email: drucee@gmail.com</p>
+			</div>
+			<a id="facebook" href="http://www.facebook.com/evan.druce1"> <img src="https://www.facebookbrand.com/img/fb-art.jpg" height="32" width="32">
+			</a>
+			<a id="github" href="https://github.com/drucee">
+				<img src="http://megaicons.net/static/img/icons_sizes/8/178/48/logos-github-icon.png">
+			</a>
+		</div>
 	</footer>
 </html>
