update html and css to pass validation

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE HTML>
 <html>
-	<title>Evan Druce's Homepage</title>
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+		<meta charset = "UTF-8">
+		<title>Evan Druce's Homepage</title>
 	</head>
-	<div id="topbox" class="clearfix">
-		<header>
-			<span><img src="blog/imgs/selfie.jpg"></span>
-			<span><h1>Evan Druce's Homepage</h1></span>
+	<body>
+		<header class="clearfix">
+			<span><img src="blog/imgs/selfie.jpg" alt="selfie"></span>
+			<h1>Evan Druce's Homepage</h1>
+			<nav>
+				<a class = "active" href="index.html">Home</a>
+				<a href="blog/index.html">Blog</a>
+				<a href="/#/">About Me</a>
+				<a href="/#/">Projects</a>
+			</nav>
 		</header>
-		<nav>
-			<a class = "active" href="index.html">Home</a>
-			<a href="blog/index.html">Blog</a>
-			<a href="/#/">About Me</a>
-			<a href="/#/">Projects</a>
-		</nav>
-	</div>
-	<br>
-	<br>
-	<section>
-		<h2>Welcome to my Homepage!</h2>
-		<p>My name is Evan Druce, and I am in the Fiery Skippers cohort at Dev Bootcamp in New York City, class of 2016! This is where you will find professional information about me, including a resume and contact information, as well as links to projects I have completed and the blog I have been writing as part of Phase 0 of Dev Bootcamp.</p>
-	</section>
-	<footer>
-		<div id = "bottombox">
+		<section>
+			<h2>Welcome to my Homepage!</h2>
+			<p>My name is Evan Druce, and I am in the Fiery Skippers cohort at Dev Bootcamp in New York City, class of 2016! This is where you will find professional information about me, including a resume and contact information, as well as links to projects I have completed and the blog I have been writing as part of Phase 0 of Dev Bootcamp.</p>
+		</section>
+		<footer>
 			<div id = "byline">
 				<p>Designed by: Evan Druce</p>
 				<p>email: drucee@gmail.com</p>
 			</div>
-			<a id="facebook" href="http://www.facebook.com/evan.druce1"> <img src="https://www.facebookbrand.com/img/fb-art.jpg" height="32" width="32">
+			<a id="facebook" href="http://www.facebook.com/evan.druce1"> <img src="https://www.facebookbrand.com/img/fb-art.jpg" alt="facebook logo" height="32" width="32">
 			</a>
 			<a id="github" href="https://github.com/drucee">
-				<img src="http://megaicons.net/static/img/icons_sizes/8/178/48/logos-github-icon.png">
+				<img src="http://megaicons.net/static/img/icons_sizes/8/178/48/logos-github-icon.png" alt = "github logo">
 			</a>
-		</div>
-	</footer>
+		</footer>
+	</body>
 </html>
