--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav>
 				<a class = "active" href="index.html">Home</a>
 				<a href="blog/index.html">Blog</a>
-				<a href="/#/">About Me</a>
+				<a href="about.html">About Me</a>
 				<a href="/#/">Projects</a>
 			</nav>
 		</header>
