add projects page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a class = "active" href="index.html">Home</a>
 				<a href="blog/index.html">Blog</a>
 				<a href="about.html">About Me</a>
-				<a href="/#/">Projects</a>
+				<a href="projects/projects.html">Projects</a>
 			</nav>
 		</header>
 		<section>
