--- a/projects/projects.html
+++ b/projects/projects.html
@@ -1,36 +1,29 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
-		<link rel="stylesheet" type="text/css" href="../stylesheets/blog.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 		<meta charset = "UTF-8">
-		<title>Blog Post Title</title>
+		<title>Projects</title>
 	</head>
 	<body>
 		<header class="clearfix">
-			<span><img src="imgs/selfie.jpg" alt = "selfie"></span>
+			<span><img src="blog/imgs/selfie.jpg" alt="selfie"></span>
 			<h1>Evan Druce's Homepage</h1>
 			<nav>
 				<a href="../index.html">Home</a>
-				<a class="active" href="index.html">Blog</a>
+				<a href="../blog/index.html">Blog</a>
 				<a href="../about.html">About Me</a>
-				<a href="../projects/projects.html">Projects</a>
+				<a class = "active" href="projects.html">Projects</a>
 			</nav>
 		</header>
 		<section>
-			<h2>Blog Posts</h2>
-			<p>Here you will find links to the blog posts I have written as part of Dev Bootcamp Phase 0.</p>
+			<h2>Projects</h2>
+			<p>Here you will find links to projects I have created as part of DBC.</p>
+			<a href="/#/">Placeholder Project 1</a>
+			<a href="/#/">Placeholder Project 2</a>
+			<a href="/#/">Placeholder Project 3</a>
+			<a href="/#/">Placeholder Project 4</a>
 		</section>
-		<nav>
-			<a href="blog1.html">Post 1: Version Control</a>
-			<a href="css-concepts.html">Post 2: CSS Concepts</a>
-			<a href="arrays-hashes.html">Post 3: Arrays and Hashes</a>
-			<br>
-			<a href="/#/">Post 4: placeholder</a>
-			<a href="ruby-classes.html">Post 5: Ruby Classes</a>
-			<a href="/#/">Post 6: placeholder</a>
-			<a href="/#/">Post 7: placeholder</a>
-		</nav>
 		<footer>
 			<div id = "byline">
 				<p>Designed by: Evan Druce</p>
